# cookiecutter-python

./: LICENSE  README.org  cookiecutter.json  project.org
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: .dir-locals.el  .flake8  .gitignore  changelog.org  dodo.py  project-snippets.el  pyproject.toml  pythonrc  readme.org  requirements-bootstrap.txt
{{ cookiecutter.project_slug }}/tests/: test_{{ cookiecutter.main_file }}.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_name }}/: __main__.py  {{ cookiecutter.main_file }}.py
